--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
+body {
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 .root {
-  width: 1440px;
-  height: 1024px;
+  min-height: calc(100vh - 90px);
   left: 0px;
   top: 0px;
-  background: rgba(255, 255, 255, 0.75);
+  padding: 100px 0 74px 0;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+#main-page {
+  width: 1000px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.logo-container {
+  width: 220px;
+  height: 140px;
+}
+
+.type-question_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 100px 0;
+}
+
+.img-question {
+  width: 415px;
+  height: 415px;
+  background-position: center;
+}
+
+.title-question {
+  display: flex;
+  justify-content: flex-end;
+  width: 412px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-size: 36px;
+  line-height: 44px;
+  text-align: right;
+  text-transform: uppercase;
+  color: #660033;
+}
+
+.type-question {
+  font-weight: 700;
+}
+
+.quiz-question {
+  font-weight: 400;
+}
+
+.button-wrapper {
+  width: 150px;
+  height: 50px;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  border: none;
+  background-color: #660033;
+}
+
+.button-img {
+  height: 45px;
+  width: 45px;
+}
+
+.button-content {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: right;
+  text-transform: uppercase;
+  color: #ffffff;
 }
