--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,7 +22,8 @@ body {
 }
 
 #main-page,
-#settings-page {
+#settings-page,
+#categori-page {
   width: 1000px;
   height: 100%;
   display: flex;
@@ -45,6 +46,10 @@ body {
 
 .type-question_container {
   margin: 100px 0;
+}
+
+.question-card:hover {
+  cursor: pointer;
 }
 
 .img-question {
@@ -82,7 +87,7 @@ body {
 .button {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -97,9 +102,11 @@ body {
 .button-img {
   height: 45px;
   width: 45px;
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
-.button-img_undefined {
+.button-img_null {
   display: none;
 }
 
@@ -235,4 +242,62 @@ body {
   justify-content: space-between;
   width: 350px;
   margin-top: 173px;
+}
+
+.header-bar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.home-button,
+.score-button {
+  margin: 15px 0 21px 0;
+}
+
+.categori-item_container {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 620px;
+}
+
+.categori-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 184px;
+  height: 300px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.categori-number {
+  margin: 0 0 0 10px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 88px;
+  text-transform: uppercase;
+  color: #555555;
+}
+
+.categori-title {
+  margin: 0 0 0 10px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+  color: #555555;
+}
+
+.categori-image {
+  width: 184px;
+  height: 185px;
+  background-repeat: no-repeat;
+  filter: grayscale();
 }
