--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -281,7 +281,7 @@ body {
   font-size: 72px;
   line-height: 88px;
   text-transform: uppercase;
-  color: #555555;
+  color: #660033;
 }
 
 .categori-title {
@@ -292,12 +292,20 @@ body {
   font-size: 14px;
   line-height: 17px;
   text-transform: uppercase;
-  color: #555555;
+  color: #660033;
 }
 
 .categori-image {
   width: 184px;
   height: 185px;
   background-repeat: no-repeat;
+}
+
+.disabled-categori .categori-image {
   filter: grayscale();
+}
+
+.disabled-categori .categori-number,
+.disabled-categori .categori-title {
+  color: #555555;
 }
